<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.account.PersonalDataActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/personal_data_title" />

    <com.hjq.custom.widget.layout.SettingBar
        android:id="@+id/fl_person_data_avatar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_selector"
        app:bar_startText="@string/personal_data_head">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_person_data_avatar"
            android:layout_width="@dimen/dp_110"
            android:layout_height="@dimen/dp_110"
            android:layout_gravity="end|center_vertical"
            android:layout_margin="@dimen/dp_20"
            android:scaleType="centerCrop"
            tools:src="@drawable/avatar_placeholder_ic" />

    </com.hjq.custom.widget.layout.SettingBar>

    <com.hjq.custom.widget.layout.SettingBar
        android:id="@+id/sb_person_data_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/white"
        app:bar_startText="@string/personal_data_id"
        tools:bar_endText="880634" />

    <com.hjq.custom.widget.layout.SettingBar
        android:id="@+id/sb_person_data_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_startText="@string/personal_data_name"
        app:bar_endTextHint="@string/personal_data_name_hint"
        tools:bar_endText="Android 轮子哥" />

    <com.hjq.custom.widget.layout.SettingBar
        android:id="@+id/sb_person_data_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_startText="@string/personal_data_address"
        app:bar_endDrawable="@drawable/arrows_right_ic"
        app:bar_endTextHint="@string/personal_data_address_hint" />

</LinearLayout>