<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingActivity">

    <com.hjq.bar.TitleBar
        android:id="@+id/tb_setting_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting_title" />

    <com.hjq.demo.widget.SettingBar
        android:id="@+id/sb_setting_language"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        app:bar_leftText="@string/setting_language"
        app:bar_rightIcon="@mipmap/ico_go_black"
        tools:bar_rightHint="@string/setting_language_simple" />

    <com.hjq.demo.widget.SettingBar
        android:id="@+id/sb_setting_update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/setting_update"
        app:bar_rightIcon="@mipmap/ico_go_black" />

    <com.hjq.demo.widget.SettingBar
        android:id="@+id/sb_setting_agreement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        app:bar_leftText="@string/setting_agreement"
        app:bar_rightIcon="@mipmap/ico_go_black" />

    <com.hjq.demo.widget.SettingBar
        android:id="@+id/sb_setting_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:bar_leftText="@string/setting_about"
        app:bar_rightIcon="@mipmap/ico_go_black" />

    <com.hjq.demo.widget.SettingBar
        android:id="@+id/sb_setting_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        app:bar_leftText="@string/setting_auto">

        <com.hjq.widget.SwitchButton
            android:id="@+id/sb_setting_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginLeft="@dimen/space_30"
            android:layout_marginRight="@dimen/space_30" />

    </com.hjq.demo.widget.SettingBar>

    <com.hjq.demo.widget.SettingBar
        android:id="@+id/sb_setting_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        app:bar_leftText="@string/setting_cache"
        app:bar_rightIcon="@mipmap/ico_go_black" />

    <com.hjq.demo.widget.SettingBar
        android:id="@+id/sb_setting_exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_30"
        app:bar_leftColor="@color/red"
        app:bar_leftText="@string/setting_exit" />

</LinearLayout>