<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.SettingActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/setting_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_leftText="@string/setting_language_switchover"
                app:bar_rightDrawable="@drawable/arrows_right_ic"
                tools:bar_rightHint="@string/setting_language_simple" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_update">

                <com.hjq.shape.view.ShapeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/dp_30"
                    android:paddingHorizontal="@dimen/dp_6"
                    android:paddingBottom="@dimen/dp_3"
                    android:text="new"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp_15"
                    app:shape="rectangle"
                    app:shape_radius="@dimen/dp_720"
                    app:shape_solidColor="#F85E5E" />

            </com.hjq.widget.layout.SettingBar>

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_leftText="@string/setting_phone"
                app:bar_rightDrawable="@drawable/arrows_right_ic"
                tools:bar_rightText="181****1413" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_password"
                app:bar_rightDrawable="@drawable/arrows_right_ic"
                tools:bar_rightText="密码强度较低" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_agreement"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_leftText="@string/setting_agreement"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_about"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_15"
                app:bar_leftText="@string/setting_auto">

                <com.hjq.widget.view.SwitchButton
                    android:id="@+id/sb_setting_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginHorizontal="@dimen/dp_15" />

            </com.hjq.widget.layout.SettingBar>

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_cache"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:bar_leftText="@string/setting_cache"
                app:bar_rightDrawable="@drawable/arrows_right_ic" />

            <com.hjq.widget.layout.SettingBar
                android:id="@+id/sb_setting_exit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/dp_15"
                app:bar_leftText="@string/setting_exit"
                app:bar_leftTextColor="@color/red" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</LinearLayout>