<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.PasswordResetActivity">

    <com.hjq.bar.TitleBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/password_reset_title" />

    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_reset_password1"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:background="@color/white"
        android:drawableStart="@drawable/safe_ic"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/password_reset_phone_hint1"
        android:inputType="textPassword"
        android:maxLength="20"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingVertical="@dimen/dp_18"
        android:singleLine="true" />

    <View
        style="@style/HorizontalLineStyle"
        android:layout_marginHorizontal="@dimen/dp_20" />

    <com.hjq.widget.view.PasswordEditText
        android:id="@+id/et_password_reset_password2"
        style="@style/EditTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:drawableStart="@drawable/safe_ic"
        android:drawablePadding="@dimen/dp_15"
        android:hint="@string/password_reset_phone_hint2"
        android:imeOptions="actionDone"
        android:maxLength="20"
        android:paddingHorizontal="@dimen/dp_20"
        android:paddingVertical="@dimen/dp_18"
        android:singleLine="true" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_password_reset_commit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_40"
        android:layout_marginVertical="@dimen/dp_30"
        android:text="@string/common_step_complete" />

</LinearLayout>